[tool.poetry]
name = "pylint-plugins"
version = "0.1.0"
description = ""
authors = ["dszurovecz <dszurovecz@cloudera.com>"]
license = "Cloudera"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.4"
ruff = "^0.9.6"
nox = "^2025.2.9"
pylint = "2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
